# btor2mlir-2

./: CMakeLists.txt  README.md  run_script.sh
btorProject/: CMakeLists.txt  btor2exe.cpp  btorc.cpp
btorProject/include/: CMakeLists.txt
btorProject/include/btor/: BtorDialect.h  BtorOps.td  CMakeLists.txt  Dialect.h  Ops.td  Parser.h
btorProject/lib/btor/: BtorDialect.cpp
btorProject/mlir/: Dialect.cpp  MLIRGen.cpp
btorProject/parser/: AST.cpp
toy/: CMakeLists.txt
toy/Ch2/: toyc.cpp
toy/Ch2/include/btor/: AST.h  Lexer.h  MLIRGen.h  Ops.td
toy/Ch2/include/toy/: AST copy.h  Ops.td
toy/Ch2/mlir/: Dialect copy.cpp  Dialect.cpp  MLIRGen.cpp
